src/pages/PokedexPage.css
.pokedexPageContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
  padding-bottom: 1em;
}

@media screen and (min-height: 850px) {
  .pokedexPageContainer {
  }
}
@media screen and (max-width: 340px) {
  .pokedexPageContainer {
    padding-left: 15px;
  }
}

.pokedex {
  width: 100%;
  max-width: 425px;
  position: relative;
  max-width: 100%;
  height: auto;
  float: right;
}
.pokedexImg {
  margin-top: 0.5em;
}
/* --- */
.pokedexPageContainerImgContainer {
  position: absolute;
  top: 18.9em;
  margin-right: 2.1em;
}
.imgContainerImg {
  width: 10em;
}
/* --- */
.pokedexPageContainerNameAndIdContainer {
  position: absolute;
  top: 29.7em;
  margin-right: 2.2em;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: #e3e3e3;
}

.nameAndIdContainerPokemonName {
  margin: 0em 0.5em;
}

.nameAndIdContainerPokemonName:focus {
}

.nameAndIdContainerPokemonId {
  margin: 0em 0.5em;
}
.arrowAndIdContainer {
  display: flex;
}
.arrow {
  position: relative;
  top: -3px;
  color: #c70a3c;
  cursor: pointer;
  outline-offset: -12px;
  font-size: 1.25rem;
  line-height: 1;
  padding: 0.15rem 0.35rem;
}

.arrow::before {
  content: "";
  position: absolute;
  top: -20px;
  left: -20px;
  right: -20px;
  bottom: -20px;
}

.pokemonDetailsContainer {
  position: absolute;
  top: 35.4em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5em;
  background-color: #e3e3e3;
  border-radius: 0.75em;
  border: 1.5px solid #000000;
  width: 300px;
  list-style: none;
  margin: 0;
  transform: translateX(-1.2em);
  padding: 0.1em 0.2em;
  font-size: 0.95em;
}

/* --- */
.pokedexPageContainerTypesContainer {
  display: flex;
  color: #222;
  white-space: nowrap;
}

.typesContainerTypesTitle {
  font-weight: bold;
  margin-right: 3px;
  color: #222;
}
.typesContainerPokedexType {
}

/* --- */
.pokedexPageContainerWeightAndHeightContainer {
  display: flex;
  color: #222;
  white-space: nowrap;
}
.pokedexPageContainerWeightContainer {
  display: flex;
  margin: 0em 0.5em;
}
.weightContainerWeightTitle {
  margin-right: 0.2em;
  font-weight: bold;
  color: #222;
}
.weightContainerWeight {
}
.pokedexPageContainerHeightContainer {
  display: flex;
  margin: 0em 0.5em;
}
.heightContainerHeightTitle {
  margin-right: 0.2em;
  font-weight: bold;
  color: #222;
}

/* --- */
.pokedexPageContainerCategoryContainer {
  display: flex;
  color: #222;
  white-space: nowrap;
}
.categoryContainerCategoryTitle {
  margin-right: 0.2em;
  font-weight: bold;
  color: #222;
}
.categoryContainerCategory {
}



/* --- */
/* .pokedexPageContainerGenderContainer{
	display: flex;
	position: absolute;;
	color: #fff;
}
.genderContainerGenderTitle{

}
.genderContainerGender{

} */

/* --- */
.pokedexPageContainerDescriptionContainer {
  width: 100%;
  text-align: center;
  color: #222;
}
.descriptionContainerDescriptionTitle {
  font-weight: bold;
  color: #222;
}
.descriptionContainerDescriptionText {
}

/* Lien de retour à l'accueil */
.backToHomeLink {
  position: fixed;
  bottom: 6.5em;
  left: 49%;
  transform: translateX(-50%);
  padding: 1rem 1.5rem;
  background-color: #f1f1f1;
  color: #222;
  text-decoration: none;
  border-radius: 0.5rem;
  font-weight: 600;
  white-space: nowrap;
  width: fit-content;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.2s;
  z-index: 50;
}

.backToHomeLink:focus {
  opacity: 1;
  pointer-events: auto;
  outline: 2px solid #222;
  outline-offset: 2px;
}

.darkMode .backToHomeLink {
  background-color: #222222;
  color: #f1f1f1;
}

